# document-storage

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
.github/workflows/: msvc.yaml  test.yaml
src/: error.rs  lib.rs  main.rs
src/atomics/: mod.rs
src/cli/: mod.rs  search.rs  services.rs  upload.rs
src/storage/: mod.rs  opensearch.rs  quickwit.rs
src/storage/opensearch/: atomic.rs  mod.rs  service.rs
src/storage/quickwit/: atomic.rs  mod.rs  service.rs
