[package]
name = "document-storage"
description = "A Json object 'tee' program that takes json as input, stores it in a document database and then returns it as it was input"
version = "0.1.0"
edition = "2024"
authors = ['Maya Kerostasia']
license-file = "LICENSE.txt"

[[bin]]
name = "tee-doc"
path = "src/bin/tee_doc.rs"

[[package.metadata.wix]]
name = "tee-doc"
product-icon = "./assets/icon.ico"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
clap-stdin = "0.6.0"
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }
